--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://kit.fontawesome.com/2a62d28c86.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </head>
 
-<body>
+<body style="overflow-y: hidden;">
     <work-root></work-root>
 </body>
 
